--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+  - assets/images/splash.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -60,12 +61,12 @@ flutter:
 
 flutter_native_splash:
   color: "#fff"
-  image:  assets/images/Alexander_the_Great_standing_triumphantly_on_a_bat.png
+  image:  assets/images/splash.png
   android: true
   ios: true
 
 assets:
-  - assets/images/Alexander_the_Great_standing_triumphantly_on_a_bat.png
+  - assets/images/splash.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
