--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.0
-
+  dio: ^4.0.0
+  provider: ^6.1.2
+  flutter_speed_dial: ^7.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -45,7 +47,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -54,6 +56,7 @@ dev_dependencies:
 flutter:
   assets:
   - assets/images/splash.jpg
+  - assets/images/home.jpg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
